# pqic-gic-quadrigems

./: .gitignore  Classical_Analysis.ipynb  PQIC classical analysis draft.ipynb  README.md  circuit.ipynb  circuit_components.py  circuit_extra.py  circuit_main.py  circuit_pipelines.py  circuit_postprocess.py  circuits.py  dmvhack.ipynb  main.py  neurodata.py  provider_ibmq.py  pyproject.toml  requirements.txt  ruff.toml  should_be_stdlib.py  small_world_propensity.py
data/: .gitignore  circuits_amp-ddd.xlsx  circuits_amp-qft-ddd.xlsx  circuits_amp-qft.xlsx  circuits_amp.xlsx  circuits_ang-qft-ddd.xlsx  circuits_ang-qft.xlsx  circuits_ang.xlsx  circuits_quantum_fidelity_amp_embed.xlsx  circuits_quantum_fidelity_amp_embed_ddd.xlsx  circuits_quantum_fidelity_amp_embed_qft.xlsx  circuits_quantum_fidelity_amp_embed_qft_ddd.xlsx  circuits_quantum_fidelity_angle_embed.csv  circuits_quantum_fidelity_angle_embed.xlsx  circuits_stats_amp-ddd.csv  circuits_stats_amp-qft-ddd.csv  circuits_stats_amp-qft.csv  circuits_stats_amp.csv  circuits_stats_ang.csv  classical-correlations.csv  data_tuning-curves_normalized.csv  data_tuning-curves_resampled.csv  data_tuning-curves_rescaled.csv  euclidean_distance.csv  quantum_fidelity.csv  quantum_fidelity_amp_embed.csv  quantum_fidelity_amp_embed_qft.csv  quantum_fidelity_amp_qft.csv  quantum_fidelity_angle_embed.csv  quantum_fidelity_angle_embed_qft.csv  quantum_fidelity_ibm_kingston.xlsx  quantum_fidelity_iqft_angle.csv  quantum_fidelity_qft_angle.csv  rescaled_tuning_curves.csv  results_ibm-kingston.xlsx  results_ibm-kingston_stats_amp-ddd.csv  results_ibm-kingston_stats_amp-qft-ddd.csv  results_ibm-kingston_stats_amp-qft.csv  results_ibm-kingston_stats_amp.csv  results_ibm-kingston_stats_ang.csv  (+4 more)
data_dist/: url.txt
lib_unused/: circuit_pipelines.py  main.py
mitigation/: 2b_make_mitiq_circuits.ipynb  final_make_mitiq_circuits.ipynb  pyproject.toml
notebooks/: 2_prepare_quantum_circuits.ipynb  4_jobs_ibmq.ipynb  PQIC classical analysis draft.ipynb  analysis_amp_encoding.ipynb  analysis_iqp_qft_swap.ipynb  circuit_stats.ipynb  classical_analysis.ipynb  (+16 more)
(+18 files in other folders)
